--- a/Finals Task 2.html
+++ b/Finals Task 2.html
@@ -56,7 +56,7 @@
         }
         .challenge {
             background-color: white;
-            width: 45%;
+            width: 850px;
             padding: 10px;
             display: grid;
             grid-template-columns: repeat(3, 270px);
